# corewar

./: .gitignore  .gitmodules  2  CMakeLists.txt  README.md  asm  check_asm.sh  check_asm_error.sh  check_errors.sh  check_input.sh  main.c
42.s/: casimir_demo.s  dif  sss.sh
checkers/: asm  check_asm_report.txt  check_inputs_report.txt  data_error.txt
checkers/asm_test/error_champs/: no_comment.s  no_name.s  no_name_comment.s  unexisting_label.s  unknown_instruction.s  with_null.s  with_null_cmd.s  wrong_argument_number.s  wrong_character_label.s  wrong_type_argument.s
checkers/asm_test/out_demo/: Bazou.s  Car.s  Code_eater.s  Eraser.s  ForgottenOne.s  Hidden.s  Izi_Miaou.s  Kitty_Miaou.s  MarineKing.s  Misaka_Mikoto.s  NoIdea.s  Stargate0_1.s  TheHarvester.s  Varimathras.s  _honeybadger.s  barriere.s  champ.s  corelol.s  darksasuke.s  gedeon.s  jinx.s  justin_bee.s  katchup.s  lapsang.s  meowluigi.s  mortel.s  pai_mu_tan.s
checkers/champs_errors/: magic_header_and_null.cor  one_more_null_before_code.cor  wrong_code_size.cor  wrong_code_size_2.cor  wrong_code_size_3.cor  wrong_magic_header.cor
checkers/demo_output/: with_flag_d.txt  with_flag_d_123.txt  with_flag_d_4.txt  with_flag_v.txt  with_flag_v_0.txt  with_flag_v_1.txt  with_flag_v_16.txt  with_flag_v_2.txt  with_flag_v_4.txt  with_flag_v_8.txt  without_flags.txt
checkers/diff_files/: Survivor.txt  null_comment.txt  null_in_code.txt  null_in_name.txt  null_name.txt  unprintable_character_in_name.txt
checkers/valid_champs/: no_null_between_comment_and_code.cor  no_null_between_name_and_code_size.cor  null_comment.cor  null_in_code.cor  null_in_name.cor  null_name.cor  unprintable_character_in_name.cor
demo/linux/: asm  corewar
demo/linux/sgalasso3/: Stargate0_1.s
includes/: asm.h  corewar.h  corewar_op.h  op.h  vis.h
src/: op.c
src/asm/: asm.c  ft_check_prog_list.c  ft_check_prog_list_args.c  ft_check_prog_list_args_type.c  ft_check_prog_list_args_type_functions.c  ft_disassemble.c  ft_exit.c  ft_free_mem.c  ft_init_prog_list.c  ft_libc_functions.c  ft_parse_current_line.c  ft_parse_current_line_getters.c  ft_parse_file.c  ft_parse_functions.c  ft_parse_new_line.c  ft_parse_new_line_functions.c  ft_print_error.c  ft_prog_list_getters.c  ft_prog_list_getters_args.c  ft_prog_list_getters_line_data.c  ft_project_init.c  ft_route.c  ft_usage.c  ft_write_to_file.c
src/corewar/: corewar.c  ft_analyse_input.c  ft_atoin.c  ft_battle.c  ft_check_hero.c  ft_check_opt.c  ft_doomsday.c  ft_execute.c  ft_game_orver.c  ft_get_heroes.c  ft_get_heroes_file.c  ft_get_op.c  ft_init_cursors.c  ft_init_game.c  ft_new_cursor.c  ft_options.c  ft_options_2.c  ft_parse_hero.c  ft_parse_input.c  ft_past_heroes.c  ft_past_reg.c  ft_print_arena.c  ft_print_arena_utils.c  ft_print_error.c  ft_print_resualt.c  ft_usage.c  sandbox.c
src/corewar/op/: ft_and.c  ft_pass.c  ft_sti.c  op_add.c  op_aff.c  op_and.c  op_fork.c  op_ld.c  op_ldi.c  op_lfork.c  op_live.c  op_lld.c  op_lldi.c  op_or.c  op_st.c  op_sti.c  op_sub.c  op_xor.c  op_zjmp.c  utils.c
src/logger/: logger.c
src/vis/: ft_check_color.c  ft_check_lives.c  ft_close_window.c  ft_delete_window.c  ft_draw_champions.c  ft_draw_circle.c  ft_draw_game_field.c  ft_draw_grid.c  ft_draw_heart.c  ft_draw_line.c  ft_draw_rectangle.c  ft_draw_start_field.c  ft_get_color.c  ft_init_window.c  ft_key_press.c  ft_put_info.c  ft_put_logo.c  ft_redraw_game_filed.c  ft_rewrite_point.c
